[project]
name = "hirag-prod"
version = "0.1.0"
description = "Toward Production-ready RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=0.3.8",
    "matplotlib==3.10.0",
    "mcp[cli]>=1.6.0",
    "networkx==3.3",
    "numpy>=1.26.4",
    "openai==1.61.0",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "pydantic-settings>=2.11.0",
    "scikit-learn==1.6.1",
    "tenacity==9.0.0",
    "tiktoken==0.9.0",
    "tqdm==4.66.5",
    "docling==2.41.0",
    "docling-core",
    "redis==6.2.0",
    "boto3==1.40.9",
    "botocore>=1.40.63",
    "json-repair==0.48.0",
    "sqlmodel==0.0.24",
    "pgvector==0.4.1",
    "nltk==3.9.1",
    "rapidfuzz==3.14.1",
    "opencc==1.1.9",
    "hanlp==2.1.2",
    "langchain_community==0.3.31",
    "xlrd==2.0.2",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "pyhumps==3.8.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-prometheus==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-asyncpg==0.58b0",
    "opentelemetry-instrumentation-openai==0.47.3",
    "opentelemetry-instrumentation-threading==0.58b0",
    "prometheus-fastapi-instrumentator==7.1.0",
    # "opentelemetry-instrumentation-aio-pika==0.58b0",
    # "opentelemetry-instrumentation-redis==0.58b0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "requests>=2.32.5",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
docling-core = { git = "https://github.com/Zachary260325/docling-core.git", branch = "main" }

[project.scripts]
mcp-hirag-tool = "hirag_prod.server:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["black>=25.1.0", "blackdoc>=0.3.9", "isort>=6.0.1", "autoflake>=2.3.1"]
test = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
